--- a/index.html
+++ b/index.html
@@ -11,13 +11,32 @@
     <title>Qucik Quiz</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="file:///Users/jefryromero/Desktop/QuizGame/quiz.html">Jefry Quiz</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Highscore</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <h1>Qucik Quiz</h1>
     <div class="jumbotron">
       <h1 class="display-4">Jefry Quick Quiz</h1>
       <p class="lead"> Try your best and anwser my five quick questions in 1 minute!</p>
       <hr class="my-4">
       <p>Lets see if you can beat the highscore</p>
-      <a class="btn btn-primary btn-lg" href="file:///Users/jefryromero/Desktop/QuizGame/quiz.html" role="button">START!</a>
+      <a class="btn btn-primary btn-lg" href="file:///Users/jefryromero/Desktop/QuizGame/quiz.html" role="button-start">START!</a>
     </div> 
     
     
