--- a/quiz.html
+++ b/quiz.html
@@ -11,7 +11,37 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="file:///Users/jefryromero/Desktop/QuizGame/index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="file:///Users/jefryromero/Desktop/QuizGame/quiz.html">Jefry Quiz</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Highscore</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    <h1>Goodluck!</h1>
+    <div class="card" style="width: 18rem;">
+        <div class="card-header">
+          What color is blueberry jam?
+        </div>
+        <ul class="list-group list-group-flush">
+          <button type="button" class="btn btn-primary btn-sm">purple</button>
+          <button type="button" class="btn btn-primary btn-sm">red</button>
+          <button type="button" class="btn btn-primary btn-sm">blue</button>
+        </ul>
+      </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
