display timer but noit functional yet

--- a/quiz.html
+++ b/quiz.html
@@ -33,6 +33,7 @@
     <h1>Goodluck!</h1>
     <div class="card" style="width: 18rem;">
         <div class="card-header">
+          <span id="timeLeft">0</span>
           What color is blueberry jam?
         </div>
         <ul class="list-group list-group-flush">
