adding questions and ripping a page off

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     </nav>
     <h1>Qucik Quiz</h1>
     <div class="jumbotron">
-      <h1 class="display-4">Jefry Quick Quiz</h1>
+      <h1 class="display-4" >Jefry Quick Quiz</h1>
+      <span id="timeLeft">0</span>
       <p class="lead"> Try your best and anwser my five quick questions in 1 minute!</p>
       <hr class="my-4">
       <p>Lets see if you can beat the highscore</p>
