setting score and connecting it to my html

--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
           <li class="nav-item">
             <a class="nav-link" href="file:///Users/jefryromero/Desktop/QuizGame/quiz.html">Jefry Quiz</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Highscore</a>
-          </li>
         </ul>
       </div>
     </nav>
@@ -36,6 +33,13 @@
       <span id="timeLeft">0</span>
       <p class="lead"> Try your best and anwser my five quick questions in 1 minute!</p>
       <hr class="my-4">
+      <div id="bodyQuiz">
+
+
+
+      
+      </div>
+
       <p>Lets see if you can beat the highscore</p>
       <a class="btn btn-primary btn-lg" href="file:///Users/jefryromero/Desktop/QuizGame/quiz.html" role="button-start">START!</a>
     </div> 
