--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <span id="timeLeft">0</span>
       <p class="lead"> Try your best and anwser my five quick questions in 1 minute!</p>
       <hr class="my-4">
-      <div id="bodyQuiz">
+      <div id="quizBody">
 
 
 
